# needle-mcp

./: Dockerfile  README.md  claude-desktop-config.json  commands  pyproject.toml  smithery.yaml
mcp_server_needle/: __main__.py  server.py
src/needle_mcp/: server.py
