[project]
name = "needle-mcp"
version = "0.1.0"
description = "Needle MCP integration"
dependencies = [
    "mcp",
    "needle",
    "python-dotenv",
]

[[project.authors]]
name = "Jan Heimes"
email = "jan@needle-ai.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
needle-mcp = "needle_mcp:main"
