[project]
name = "needle-mcp"
version = "0.1.0"
description = "Needle MCP integration"
license = "MIT"
dependencies = [
    "needle-python>=0.4.0",
    "mcp>=1.1.0",
    "python-dotenv>=1.0.1",
]

[[project.authors]]
name = "Jan Heimes"
email = "jan@needle-ai.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
needle-mcp = "needle_mcp:main"