[project]
name = "needle-mcp"
version = "1.0.0"
description = "Needle MCP integration"
license = "MIT"
dependencies = ["needle-python>=0.6.0", "mcp>=1.1.0", "python-dotenv>=1.0.1"]

[[project.authors]]
name = "Onur Eken"
email = "onur@needle.app"

[[project.authors]]
name = "Jan Heimes"
email = "jan@needle.app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
needle-mcp = "needle_mcp:main"
